--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,12 +14,13 @@
     <style>
       * {
         box-sizing: border-box;
-      }
-      body {
         font-family: "Poppins", sans-serif;
         margin: 0;
         padding: 0;
+      }
+      body {
         color: rgb(55, 55, 55);
+        height: 100vh;
       }
       a {
         color: rgb(55, 55, 55);
